--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='#'>Open Source Open Mic Night</a> (May 1st, Thursday, 7-9pm)</p>
+                    <p><a href='../events/5'>USCLUG::OpenMicNight()</a> (May 1st, Thursday, 7-8:30pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
