--- a/events/5/index.html
+++ b/events/5/index.html
@@ -59,32 +59,28 @@
             <!-- main content -->
             <div class="col-sm-8">
 
+
                 <!-- first entry-->
-                <h2><a href="../../events/4">Using the Command Line: The Basics, Tips and Tricks</a>
+                <h2><a href="events/5">USCLUG::OpenMicNight(): An Open-Source Community Workshop</a>
                 </h2>
 
-                <p><i class="fa fa-calendar"></i> Time: Thursday March 13, 2014 6:30-8pm</p>
-                <p><i class="fa fa-globe"></i> Location: THH102</p>
-                <p><i class="fa fa-facebook-square"></i> <a href="https://facebook.com/events/1431168193795022">Facebook Event</a></p>
+                <p><i class="fa fa-calendar"></i> Time: Thursday May 1, 2014 7-8:30pm</p>
+                <p><i class="fa fa-globe"></i> Location: SLH102</p>
+                <p><i class="fa fa-facebook-square"></i> <a href="https://facebook.com/events/1490766814469474">Facebook Event</a></p>
                
-                <p>Interactive workshop where you learn how to use the command line (terminal) in Linux and Unix (like Mac OS X) systems. You'll learn about the basics that every developer and programmer needs, and learn the commands you need to be productive in Linux and Unix environments.</p>
+                <p>Interactive workshop where members of the USC community (you!) will have short 5-15 minutes to talk about anything open-source, programming or developer-related! We will also have free Virtual Private Servers from Digital Ocean!</p>
 
                 <hr>
 
-                <p>USCLUG will be hosting a workshop this week about the command line interface (terminal) this Thursday! Intended for beginning programmers and non-programmers, this workshop will give you the foundation necessary to start being a better developer and using Linux. We'll start with the basics, and then get to a point where we can start creating basic websites on servers.</p>
+                <p>We are accepting applications for talks at <a href="https://docs.google.com/a/usc.edu/forms/d/1t_-q0oQp2vQcriZVc0A7QHWIxxjGvVZYpmsfT4r1I5k/viewform">this link!</a></p>
 
-                <p>This workshop will serve as the foundation for our later workshops, so be sure to come out and learn! :D</p>
+                <p>The cutoff for applications will be Tuesday, April 29th at noon.</p>
 
-                <p>If you want to actively participate in the workshop, we would like you to be actually working in Linux. You can do this by using a Virtual Machine and use Linux if you are not already using it.
-                    <ol>
-                        <li>Download the Linux Virtual Machine at <a href="http://lug.usc.edu/dropbox/usclug-vm.ova">this link.</a></li>
-                        <li>Install VirtualBox and import the VM (username: usclug / pw: tux).</li>
-                    </ol>
-                </p>
+                <p>The list of presenters will be determined at a later date once we get applications, and we follow up individually with all applications.</p>
 
                 <hr> 
 
-                <iframe src="https://docs.google.com/presentation/d/1i-d_Mv23La68ouBS9G3yxO2qtqFvZ1BjQ8zXOb56dFY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <p>Slides will be posted here eventually!~</p>
 
             </div>
 
