--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
             <div class="col-sm-8">
 
                 <!-- first entry-->
+                <h2><a href="events/5">USCLUG::OpenMicNight(): An Open-Source Community Workshop</a>
+                </h2>
+
+                <p><i class="fa fa-calendar"></i> Time: Thursday May 1, 2014 7-8:30pm</p>
+                <p><i class="fa fa-globe"></i> Location: SLH102</p>
+                <p><i class="fa fa-facebook-square"></i> <a href="https://facebook.com/events/1490766814469474">Facebook Event</a></p>
+               
+                <p>Interactive workshop where members of the USC community (you!) will have short 5-15 minutes to talk about anything open-source, programming or developer-related! We will also have free Virtual Private Servers from Digital Ocean!</p>
+
+                <hr>
+
+                <!-- first entry-->
                 <h2><a href="events/4">Using the Command Line: The Basics, Tips and Tricks</a>
                 </h2>
 
@@ -80,6 +92,8 @@
                 <p><i class="fa fa-facebook-square"></i> <a href="https://www.facebook.com/events/741509015868132/">Facebook Event</a></p>
                
                 <p>USCLUG (the people who brought you GIT and AWS cloud hosting workshops) will be heading to SCALE, the first and biggest open-source conference in Southern California. With lots of technical workshops, and a career expo to boot, there's lots of options for people interested and involved in software development and open-source. Sessions include workshops on OpenStack, PostgreSQL, Chef, Puppet, Cloud Technologies, DevOps, System Administration, Hardware Hacking, Security, etc. </p>
+
+                <hr>
 
                 <!-- third entry -->
                 <h2><a href="events/2">"GIT: Git Isn't Tough": Git Version Control Workshop</a>
@@ -127,7 +141,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='#'>Open Source Open Mic Night</a> (May 1st, Thursday, 7-9pm)</p>
+                    <p><a href='events/5'>USCLUG::OpenMicNight()</a> (May 1st, Thursday, 7-8:30pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
