--- a/events/5/index.html
+++ b/events/5/index.html
@@ -72,11 +72,11 @@
 
                 <hr>
 
-                <p>We are accepting applications for talks at <a href="https://docs.google.com/a/usc.edu/forms/d/1t_-q0oQp2vQcriZVc0A7QHWIxxjGvVZYpmsfT4r1I5k/viewform">this link!</a></p>
-
-                <p>The cutoff for applications will be Tuesday, April 29th at noon.</p>
-
-                <p>The list of presenters will be determined at a later date once we get applications, and we follow up individually with all applications.</p>
+                <p>Droplets: Launch and configure your own Digital Ocean VPS and control your web presence (w/ free DO codes!)</p>
+                <p>TMUX: You think browser tabs are cool? wait until you multiplex your terminal. Never lose a terminal session again and ssh like a pro.</p>
+                <p>MPD+Icecast: Make your own internet music streaming service</p>
+                <p>Grap: Describe your graphs, type-set them and include them in your document from the commandline.</p>
+                <p>Docker: Linux containers are all the rage. See how you can standardize your deployment using lightweight containers.</p>
 
                 <hr> 
 
