--- a/events/5/index.html
+++ b/events/5/index.html
@@ -75,7 +75,7 @@
                 <p>Droplets: Launch and configure your own Digital Ocean VPS and control your web presence (w/ free DO codes!)</p>
                 <p>TMUX: You think browser tabs are cool? wait until you multiplex your terminal. Never lose a terminal session again and ssh like a pro.</p>
                 <p>MPD+Icecast: Make your own internet music streaming service</p>
-                <p>Grap: Describe your graphs, type-set them and include them in your document from the commandline. <a href="./grap.odp">Slides</a></p>
+                <p>Grap: Describe your graphs, type-set them and include them in your document from the commandline. <a href="./grap.pdf">Slides</a></p>
                 <p>Docker: Linux containers are all the rage. See how you can standardize your deployment using lightweight containers.</p>
 
                 <hr> 
